<?xml version="1.0"?>
<package format="3">
  <name>ros2</name>
  <version>0.0.0</version>
  <description>cuboid robot with lidar</description>

  <maintainer email="you@example.com">you</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>gazebo_ros</depend>

</package>